# opencl

./: .clang-format  .clang-tidy  .flake8  .gitignore  CMakeLists.txt  README.md
base/: clang-format.cmake  clang-tidy.cmake
conf/: .clang-tidy  clang-format.cmake  clang-tidy.cmake  python-lint.cmake
core/: CMakeLists.txt  d_ocl.cpp  d_ocl.h  d_ocl_defines.h  d_ocl_manager.cpp  d_ocl_template_impl.cpp  d_ocl_utils.cpp  d_ocl_utils.h
examples/: CMakeLists.txt  d_ocl_examples.cpp  d_ocl_examples.h  d_ocl_examples_defines.h
examples/program-sources/: histogram_4_1.c  histogram_4_1.cl  vector_add_3_4.c
examples/programs/: 3.4-vector-add.cpp  3.4-vector-add.h  3.4_vector_add.cpp  histogram_4_2.cpp  histogram_4_2.h  programs_defines.h  vector_add_3_4.cpp
examples/res/: histogram_4_2.cl  image_convolution_4_8.cl  image_rotation_4_5.cl  vector_add_3_4.cl
examples/src/: histogram_4_2.cpp  histogram_4_2.h  image_convolution_4_8.cpp  image_convolution_4_8.h  image_rotation_4_5.cpp  image_rotation_4_5.h  vector_add_3_4.cpp  vector_add_3_4.h
platform/: CMakeLists.txt  d_ocl_platform.cpp  d_ocl_platform.h  d_ocl_platform_defines.h
scripts/: clang-format.py  clang_format.py  clang_helper.py  clang_tidy.py
test/: CMakeLists.txt  main.cpp
test/program-sources/: 3.4-vector-add.c
test/programs/: 3.4-vector-add.cpp  3.4-vector-add.h
